force-app/main/default/objects/Jira_Field_Mapping__c/Jira_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Agentforce canonical ticket field mappings to Jira backend issue fields.</description>
    <label>Jira Field Mapping</label>
    <nameField>
        <displayFormat>JFM-{0000}</displayFormat>
        <label>Jira Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>