force-app/main/default/objects/Jira_Field_Mapping__c/fields/Allow_Agent_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Agent_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Agentforce can update this Jira field after an issue is created.</description>
    <label>Allow Agent Update</label>
    <type>Checkbox</type>
</CustomField>