force-app/main/default/objects/Jira_Field_Mapping__c/fields/Ask_User_If_Missing__c.field-meta.xml
<CustomField>
    <fullName>Ask_User_If_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Agentforce should ask the employee for this value when it is required but missing.</description>
    <label>Ask User If Missing</label>
    <type>Checkbox</type>
</CustomField>