force-app/main/default/objects/Jira_Field_Mapping__c/fields/Backend_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Backend_Field_Key__c</fullName>
    <description>Mapped Jira field key used in REST payloads.</description>
    <label>Backend Field Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>