force-app/main/default/objects/Jira_Field_Mapping__c/fields/Backend_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Backend_Field_Label__c</fullName>
    <description>Mapped Jira field label cached for admin display.</description>
    <label>Backend Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>