force-app/main/default/objects/Jira_Field_Mapping__c/fields/Canonical_Field__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Field__c</fullName>
    <description>Agentforce canonical ticket field, such as summary, impact, or requesterEmail.</description>
    <label>Canonical Field</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>