force-app/main/default/objects/Jira_Field_Mapping__c/fields/Connector_Key__c.field-meta.xml
<CustomField>
    <fullName>Connector_Key__c</fullName>
    <description>Logical connector key, such as DefaultJira.</description>
    <label>Connector Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>