force-app/main/default/objects/Jira_Field_Mapping__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Direction of the Salesforce and Jira field bridge.</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce to Jira</fullName>
                <default>true</default>
                <label>Salesforce to Jira</label>
            </value>
            <value>
                <fullName>Jira to Salesforce</fullName>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>