force-app/main/default/objects/Jira_Field_Mapping__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Agentforce can use this mapping.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>