force-app/main/default/objects/Jira_Field_Mapping__c/fields/Last_Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_At__c</fullName>
    <description>Date and time when an admin last saved this mapping.</description>
    <label>Last Reviewed At</label>
    <type>DateTime</type>
</CustomField>