force-app/main/default/objects/Jira_Field_Mapping__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Admin notes explaining why this mapping exists or is disabled.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>