force-app/main/default/objects/Jira_Field_Mapping__c/fields/Required_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this canonical value is required by the Agentforce ticket contract.</description>
    <label>Required By Agent</label>
    <type>Checkbox</type>
</CustomField>