force-app/main/default/objects/Jira_Field_Mapping__c/fields/Required_By_Jira__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the mapped Jira field is required by the selected Jira project and issue type.</description>
    <label>Required By Jira</label>
    <type>Checkbox</type>
</CustomField>