force-app/main/default/objects/Jira_Field_Mapping__c/fields/Source_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Api_Name__c</fullName>
    <description>Salesforce field API name used when the source type is Salesforce Field.</description>
    <label>Source Field API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>