force-app/main/default/objects/Jira_Field_Mapping__c/fields/Source_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Label__c</fullName>
    <description>Salesforce field label cached for admin display.</description>
    <label>Source Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>