force-app/main/default/objects/Jira_Field_Mapping__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Type of source value used for this Jira mapping.</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce Field</fullName>
                <default>true</default>
                <label>Agentforce Field</label>
            </value>
            <value>
                <fullName>Salesforce Field</fullName>
            </value>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>System Context</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>