force-app/main/default/objects/Jira_Field_Mapping__c/fields/Transform_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Transform_Config_JSON__c</fullName>
    <description>Optional transform configuration, such as Salesforce value to Jira option id mappings.</description>
    <label>Transform Config JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>