force-app/main/default/objects/Jira_Field_Mapping__c/fields/Transform_Type__c.field-meta.xml
<CustomField>
    <fullName>Transform_Type__c</fullName>
    <description>How the canonical Agentforce value should be transformed before sending it to Jira.</description>
    <label>Transform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Option Id</fullName>
            </value>
            <value>
                <fullName>ADF Document</fullName>
            </value>
            <value>
                <fullName>User Mapping</fullName>
            </value>
            <value>
                <fullName>Default Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>