force-app/main/default/objects/Jira_Field_Mapping__c/fields/Use_For_Create__c.field-meta.xml
<CustomField>
    <fullName>Use_For_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this mapped field can be sent when Agentforce creates Jira issues.</description>
    <label>Use For Create</label>
    <type>Checkbox</type>
</CustomField>