force-app/main/default/objects/Jira_Field_Mapping__c/fields/Use_For_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Use_For_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this mapped field can be queried from Jira for ticket lookup.</description>
    <label>Use For Lookup</label>
    <type>Checkbox</type>
</CustomField>