force-app/main/default/objects/Jira_Field_Mapping__c/fields/Use_In_Summary__c.field-meta.xml
<CustomField>
    <fullName>Use_In_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this field is allowed in employee-facing ticket summaries.</description>
    <label>Use In Summary</label>
    <type>Checkbox</type>
</CustomField>