force-app/main/default/objects/Jira_Field_Mapping__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Latest validation status for this mapping.</description>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Needs Mapping</fullName>
                <default>true</default>
                <label>Needs Mapping</label>
            </value>
            <value>
                <fullName>Needs Transform</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>